src/test/deca/context/invalid/class/new-int.deca
// Programme testant new avec autre chose qu'une classe

class A {

}

{
    int i = new A();
}